# e2e-test-20260209-matsuzawa-3

./: pyproject.toml
.research/: research_history.json
.research/results/: stderr.txt  stdout.txt
config/: config.yaml
config/runs/: comparative-1-qwen3-8b-gsm8k.yaml  proposed-qwen3-8b-gsm8k.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
